versions/0.24.0/_sources/refs/_aws-cdk_runtime-values.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"jEw3+mDOKV/I0qS+9uoJckrKo91TvNuKnLsbHaoP1EY="}

@aws-cdk/runtime-values
=======================

.. mdinclude:: ./__aws-cdk_runtime-values.README.md

Reference
---------

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.RuntimeValues/0.24.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.RuntimeValues" Version="0.24.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.RuntimeValues --version 0.24.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.RuntimeValues" version="0.24.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/cdk-runtime-values/0.24.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:cdk-runtime-values:jar:0.24.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="cdk-runtime-values" rev="0.24.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>cdk-runtime-values</artifactId>
           <version>0.24.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:cdk-runtime-values:0.24.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='cdk-runtime-values', version='0.24.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/runtime-values/v/0.24.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/runtime-values@0.24.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/runtime-values": "^0.24.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/runtime-values@0.24.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/runtime-values/v/0.24.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/runtime-values@0.24.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/runtime-values": "^0.24.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/runtime-values@0.24.0



.. py:module:: @aws-cdk/runtime-values

RuntimeValue
^^^^^^^^^^^^

.. py:class:: RuntimeValue(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.RuntimeValues;

      .. code-tab:: java

         import software.amazon.awscdk.runtimevalues.RuntimeValue;

      .. code-tab:: javascript

         const { RuntimeValue } = require('@aws-cdk/runtime-values');

      .. code-tab:: typescript

         import { RuntimeValue } from '@aws-cdk/runtime-values';



   Defines a value published from construction code which needs to be accessible

   by runtime code.



   :extends: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param scope: 
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: 
   :type id: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/runtime-values.RuntimeValueProps`\ 

   .. py:method:: grantRead([principal])

      Grants a principal read permissions on this runtime value.



      :param principal: The principal (e.g. Role, User, Group)
      :type principal: :py:class:`@aws-cdk/aws-iam.IPrincipal`\  *(optional)*


   .. py:attribute:: ENV_NAME

      The recommended name of the environment variable to use to set the stack name

      from which the runtime value is published.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: envValue

      The value to assign to the `RTV_STACK_NAME` environment variable.



      :type: string *(readonly)*


   .. py:attribute:: parameterArn

      The ARN fo the SSM parameter used for this runtime value.



      :type: string *(readonly)*


   .. py:attribute:: parameterName

      The name of the runtime parameter.



      :type: string *(readonly)*


   .. py:method:: apply(aspect)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.apply>`

      Applies the aspect to this Constructs node



      :param aspect: 
      :type aspect: :py:class:`@aws-cdk/cdk.IAspect`\ 


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.prepare>`

      Perform final modifications before synthesis

      

      This method can be implemented by derived constructs in order to perform

      final changes before synthesis. prepare() will be called after child

      constructs have been prepared.

      

      This is an advanced framework feature. Only use this if you

      understand the implications.



      *Protected method*



   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


RuntimeValueProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: RuntimeValueProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.RuntimeValues;

      .. code-tab:: java

         import software.amazon.awscdk.runtimevalues.RuntimeValueProps;

      .. code-tab:: javascript

         // RuntimeValueProps is an interface

      .. code-tab:: typescript

         import { RuntimeValueProps } from '@aws-cdk/runtime-values';





   .. py:attribute:: package

      A namespace for the runtime value.

      It is recommended to use the name of the library/package that advertises this value.



      :type: string


   .. py:attribute:: value

      The value to advertise. Can be either a primitive value or a token.



      :type: any


